--- a/src/package.json
+++ b/src/package.json
@@ -49,6 +49,7 @@
     "@svgr/webpack": "^8.0.1",
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^15.0.7",
+    "@types/jest": "^29.5.12",
     "@types/mdx": "^2.0.12",
     "@types/node": "^20.12.11",
     "@types/react": "^18.2.73",
@@ -65,7 +66,8 @@
     "lint-staged": "^13.0.0",
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.5.11",
-    "typescript": "^5.1.3"
+    "ts-jest": "^29.1.4",
+    "typescript": "^5.4.5"
   },
   "lint-staged": {
     "*.+(js|jsx|ts|tsx)": [
